@@ -1,3 +1,11 @@
+2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b16
+
+ * Change: Decreased debugging a little in exec_internal()
+
+ * Fix: Forgot a ImageMap Change in b12
+
+ * Fix: Little permission bug in view_comments.php
+  
 2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b15
 
  * Change: Default width for popups:600 (500)
